[metadata]
name = garage-door-controller
version = attr: garage_door_controller.VERSION
description = file: DESCRIPTION
long_description = file: README.md
license = GPL-3
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
  gpiozero

[options.packages.find]
exclude =
    test
