[metadata]
name = garage-door-controller
description = file: DESCRIPTION
long_description = file: README.md
license = GPL-3
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
  gpiozero
setup_requires =
  setuptools_scm

[options.packages.find]
exclude =
    test

[options.extras_require]
dev =
    flake8
    pycodestyle
    pydocstyle
    pylint
    pytest
    pytest-cov
